# Casadi_test

./: .gitignore  CMakeLists.txt  README.md  TrajectoryOptimizer.cpp  TrajectoryOptimizer.hpp  main.cpp
